--- a/package.xml
+++ b/package.xml
@@ -31,29 +31,20 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_filters</build_depend>
-  <build_depend>image_transport</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>people_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>cv_bridge</build_depend>
   <build_depend>visualization_msgs</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>tf</build_depend>
+  <build_depend>message_runtime</build_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>message_generation</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>cv_bridge</run_depend>
-  <run_depend>image_transport</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>people_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>nodelet</run_depend>
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <nodelet plugin="${prefix}/clf_perception_nodelets.xml"/>
-  </export>
 </package>
