Face detection as SC for DLUP.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ ADD_MESSAGE_FILES(
 ADD_SERVICE_FILES(
    DIRECTORY srv
    FILES
+   GetFaceBB.srv
    ImageToPose.srv
    DoIKnowThatPerson.srv
    LearnPerson.srv
